k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ollama-proxy
  name: ollama-proxy
  namespace: ollama-proxy
spec:
  ports:
  - name: "http"
    protocol: TCP
    port: 80
    targetPort: http-web-svc
  selector:
    app: ollama-proxy
  type: ClusterIP
  clusterIP: "None"
